# PostgreSQL-Interactor

./: CHANGELOG.md  README.md  pyproject.toml
src/postgresql_interactor/: __init__.py  config.py  exceptions.py  interactor.py  postgis_registry.py  postgis_types.py  schemas.py
tests/unit/: test_schemas.py
