[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "postgresql-interactor"
version = "1.0.0"
description = "A secure PostgreSQL interactor with full PostGIS support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "David", email = "davidleonfuentes21@gmail.com" }
]
keywords = ["postgresql", "postgis", "database", "sql", "orm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
]

dependencies = [
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.urls]
Homepage = "https://github.com/dxvidlf/PostgreSQL-Interactor"
Repository = "https://github.com/dxvidlf/PostgreSQL-Interactor.git"

[tool.setuptools.packages.find]
where = ["src"]
