[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "postgresql-interactor"
version = "2.0.0"
description = "A secure PostgreSQL wrapper with full PostGIS support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "David", email = "davidleonfuentes21@gmail.com" }
]
keywords = ["postgresql", "postgis", "database", "sql", "orm", "spatial"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Typing :: Typed",
]

dependencies = [
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]
dev = [
    "pytest>=8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.urls]
Homepage = "https://github.com/dxvidlf/PostgreSQL-Interactor"
Repository = "https://github.com/dxvidlf/PostgreSQL-Interactor.git"
Changelog = "https://github.com/dxvidlf/PostgreSQL-Interactor/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
postgresql_interactor = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
